{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 56,
  "lineage": "5079bd8d-2333-b937-e14e-c53d23155e1c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:810444357255:instance/i-0d1cc6cda33f9c36b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d1cc6cda33f9c36b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0381b98ab5c483748",
            "private_dns": "ip-10-0-0-56.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.56",
            "public_ip": "44.199.192.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e409ce76234426f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-087d7dde8665db420",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d3d0255f7da8ed9"
            ]
          },
          "dependencies": [
            "aws_security_group.integrated_sg",
            "aws_subnet.IntSub1",
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:810444357255:instance/i-0b3c2d8157c119df6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3c2d8157c119df6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e351bdd16a486f20",
            "private_dns": "ip-10-0-1-141.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.141",
            "public_ip": "44.204.183.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-060a8c45198ab4b94",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ee3cebb77fee679",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d3d0255f7da8ed9"
            ]
          },
          "dependencies": [
            "aws_security_group.integrated_sg",
            "aws_subnet.IntSub2",
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810444357255:internet-gateway/igw-0e5bd68c6d6f6bcd3",
            "id": "igw-0e5bd68c6d6f6bcd3",
            "owner_id": "810444357255",
            "vpc_id": "vpc-07af4bd20102f40f7"
          },
          "dependencies": [
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "intergrated-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:810444357255:loadbalancer/app/integrated-elb/250cc3049ffd90d7",
            "arn_suffix": "app/integrated-elb/250cc3049ffd90d7",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "integrated-elb-179087315.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:810444357255:loadbalancer/app/integrated-elb/250cc3049ffd90d7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "integrated-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06d3d0255f7da8ed9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ee3cebb77fee679"
              },
              {
                "subnet_id": "subnet-087d7dde8665db420"
              }
            ],
            "subnets": [
              "subnet-01ee3cebb77fee679",
              "subnet-087d7dde8665db420"
            ],
            "tags": {
              "Name": "elb"
            },
            "tags_all": {
              "Name": "elb"
            },
            "vpc_id": "vpc-07af4bd20102f40f7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.integrated_sg",
            "aws_subnet.IntSub1",
            "aws_subnet.IntSub2",
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:810444357255:listener/app/integrated-elb/250cc3049ffd90d7/9c0b1eee52bb55f8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:810444357255:targetgroup/IntergratedTG/8cd12ae9d3f38f89",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:810444357255:listener/app/integrated-elb/250cc3049ffd90d7/9c0b1eee52bb55f8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:810444357255:loadbalancer/app/integrated-elb/250cc3049ffd90d7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.intergrated-elb",
            "aws_lb_target_group.IntergratedTG",
            "aws_security_group.integrated_sg",
            "aws_subnet.IntSub1",
            "aws_subnet.IntSub2",
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "IntergratedTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:810444357255:targetgroup/IntergratedTG/8cd12ae9d3f38f89",
            "arn_suffix": "targetgroup/IntergratedTG/8cd12ae9d3f38f89",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:810444357255:targetgroup/IntergratedTG/8cd12ae9d3f38f89",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "IntergratedTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07af4bd20102f40f7"
          },
          "dependencies": [
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "IntergratedTG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:810444357255:targetgroup/IntergratedTG/8cd12ae9d3f38f89-20231222031859728500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:810444357255:targetgroup/IntergratedTG/8cd12ae9d3f38f89",
            "target_id": "i-0d1cc6cda33f9c36b"
          },
          "dependencies": [
            "aws_instance.webserver1",
            "aws_lb_target_group.IntergratedTG",
            "aws_security_group.integrated_sg",
            "aws_subnet.IntSub1",
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "IntergratedTG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:810444357255:targetgroup/IntergratedTG/8cd12ae9d3f38f89-20231222031859559900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:810444357255:targetgroup/IntergratedTG/8cd12ae9d3f38f89",
            "target_id": "i-0b3c2d8157c119df6"
          },
          "dependencies": [
            "aws_instance.webserver2",
            "aws_lb_target_group.IntergratedTG",
            "aws_security_group.integrated_sg",
            "aws_subnet.IntSub2",
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "IntetRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810444357255:route-table/rtb-09cf82395f86974d8",
            "id": "rtb-09cf82395f86974d8",
            "owner_id": "810444357255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5bd68c6d6f6bcd3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07af4bd20102f40f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.intigw",
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTas1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a8d15404697f42c",
            "route_table_id": "rtb-09cf82395f86974d8",
            "subnet_id": "subnet-087d7dde8665db420"
          },
          "dependencies": [
            "aws_internet_gateway.intigw",
            "aws_route_table.IntetRT",
            "aws_subnet.IntSub1",
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTas2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0457fc65a7b08257c",
            "route_table_id": "rtb-09cf82395f86974d8",
            "subnet_id": "subnet-01ee3cebb77fee679"
          },
          "dependencies": [
            "aws_internet_gateway.intigw",
            "aws_route_table.IntetRT",
            "aws_subnet.IntSub2",
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "integrated_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810444357255:security-group/sg-06d3d0255f7da8ed9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d3d0255f7da8ed9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "integrated_sg",
            "name_prefix": "",
            "owner_id": "810444357255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-sg"
            },
            "tags_all": {
              "Name": "Web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07af4bd20102f40f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "IntSub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810444357255:subnet/subnet-087d7dde8665db420",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087d7dde8665db420",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "810444357255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07af4bd20102f40f7"
          },
          "dependencies": [
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "IntSub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810444357255:subnet/subnet-01ee3cebb77fee679",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ee3cebb77fee679",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "810444357255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07af4bd20102f40f7"
          },
          "dependencies": [
            "aws_vpc.integrated-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "integrated-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:810444357255:vpc/vpc-07af4bd20102f40f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec8b0ad7ced7457c",
            "default_route_table_id": "rtb-05d53493c9b426f8a",
            "default_security_group_id": "sg-01dddf3c4418dc40b",
            "dhcp_options_id": "dopt-0d57bc0f8d0ed3758",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07af4bd20102f40f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d53493c9b426f8a",
            "owner_id": "810444357255"
          }
        }
      ]
    }
  ]
}